project/manifests/base/todo-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend-app
  labels:
    app: todo-backend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend-app
  template:
    metadata:
      labels:
        app: todo-backend-app
    spec:
      containers:
        - name: todo-backend-app
          image: todo-backend-app
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
