project/manifests/base/nats.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats
  labels:
    app: nats
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats:2-alpine
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
          ports:
            - containerPort: 4222
---
apiVersion: v1
kind: Service
metadata:
  name: nats-svc
  labels:
    app: nats
spec:
  type: ClusterIP
  selector:
    app: nats
  ports:
    - port: 4222
      targetPort: 4222
