project/manifests/base/todo-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
  labels:
    app: todo-backend-app
spec:
  type: ClusterIP
  selector:
    app: todo-backend-app
  ports:
    - protocol: TCP
      port: 3000
