project/manifests/base/todo-postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: todo-postgres
  labels:
    app: todo-postgres
spec:
  serviceName: "todo-postgres-svc"
  replicas: 1
  selector:
    matchLabels:
      app: todo-postgres
  template:
    metadata:
      labels:
        app: todo-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: todo-postgres-svc
  labels:
    app: todo-postgres
spec:
  clusterIP: None
  selector:
    app: todo-postgres
  ports:
    - port: 5432
      targetPort: 5432
